--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
   - 'cd makumba-parent'
 jdk: 
   - oraclejdk8
+  - oraclejdk11
+  - openjdk10
+  - openjdk11
 
 script: "mvn cobertura:cobertura"
 
